--- a/static/css/partial/component/_navigation-bar.sass
+++ b/static/css/partial/component/_navigation-bar.sass
@@ -102,6 +102,9 @@
                 align-items: center
                 padding: .5em 0
 
+                .title
+                    font-size: 1.8em
+
             .category-container
                 background: var(--background-color--default)
                 box-shadow: 0 5px 5px #00000008
