--- a/static/css/partial/variable/_pink-theme.sass
+++ b/static/css/partial/variable/_pink-theme.sass
@@ -1,1 +1,39 @@
 body.pink.theme
+
+  //--font-family--default: 'InfinitySans'
+  //--font-family--icon: 'Font Awesome 5 Free'
+  //
+  //--background-color--default: #fffefd
+  //--background-color--nav: #F18C8E
+  //--background-color--post-container: #ffffff
+  //--background-color--file: #1f1f1f
+  //--background-color--blockquote: #fcfcfc
+  //--background-color--stepper-title: #d4a985
+  //--background-color--emphasis-tag: #f3eed975
+  //
+  //--font-color--default: #384144
+  //--font-color--nav-title: #fff
+  //--font-color--nav-category: #fffffff7
+  //--font-color--nav-link: #fffaf5bd
+  //--font-color--section-title: #485458
+  //--font-color--post-content: #485458
+  //--font-color--emphasis-tag-count: #9E0022
+  //
+  //--font-color--post-date: #8a9296
+  //--font-color--post-tag: #717679
+  //--font-color--post-category-badge: #fff
+  //--font-color--post-step-title: #fff
+  //--font-color--post-info: #a99e94
+  //--font-color--post-warning: #b79735
+  //--font-color--post-count: #d08d77
+  //
+  //--border-color--thumbnail: #eee
+  //--border-color--post-container: #f5f5f5
+  //
+  //--padding--contents-wrapper-x: 3em
+  //--padding--contents-wrapper-y: 2em
+  //
+  //--key-color--default: #F0B7A4
+  //
+  //--color-brown: #574141
+  //--color-green: #A4AF61
