--- a/_layouts/post-detail.html
+++ b/_layouts/post-detail.html
@@ -8,9 +8,9 @@
         <div class="contents-wrapper">
             {% include category-link.html categories=page.categories class="category-badge" %}
 
-            <h2 class="title">{{ page.title }}</h2>
-            <p class="date">{{ page.date | date: '%Y.%m.%d' }}</p>
-            <div class="post-content mt-5">
+            <h2 class="post-title mt-1">{{ page.title }}</h2>
+            <p class="post-date">{{ page.date | date: '%Y.%m.%d' }}</p>
+            <div class="post-contents mt-5">
                 {{ page.content }}
             </div>
 
