--- a/static/css/partial/component/_navigation-bar.sass
+++ b/static/css/partial/component/_navigation-bar.sass
@@ -41,7 +41,7 @@
                     content: '\f658'
 
             &.github
-                font-family: 'Font Awesome 5 Brands'
+                font-family: var(--font-family--icon-b)
 
                 &:before
                     content: '\f09b'
