--- a/static/css/partial/variable/_default-theme.sass
+++ b/static/css/partial/variable/_default-theme.sass
@@ -1,6 +1,7 @@
 body
   --font-family--default: 'InfinitySans'
   --font-family--icon: 'Font Awesome 5 Free'
+  --font-family--icon-b: 'Font Awesome 5 Brands'
 
   --background-color--default: #fdfdfd
   --background-color--nav: #2A272A
