--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -16,6 +16,30 @@ body
     &:hover
       opacity: .8
 
+  table
+    width: 100%
+    border-spacing: 0
+    border: 1px solid #eee
+    border-width: 1px 1px 0 1px
+
+    th, td
+      padding: 1em
+      border: 1px solid #eee
+      border-width: 0 0 1px 1px
+
+      &:first-child
+        border-left-width: 0
+
+    th
+      background: #f7f6f5
+
+    td
+      background: #fff
+      font-size: .9em
+
+    tr
+      border: 1px solid red
+
   img.thumbnail
     width: 100%
     max-width: 100%
