--- a/static/css/partial/layout/_post-detail.sass
+++ b/static/css/partial/layout/_post-detail.sass
@@ -1,83 +1,98 @@
+.post-detail.container
+  text-align: center
+  background: #fff
+  line-height: 1.8em
+
+  &.text
+    .thumbnail
+      border-radius: 0
+      border: 1px solid var(--border-color--thumbnail)
+      width: 70%
+
+  .contents-wrapper
+    padding-left: 18%
+    padding-right: 18%
+
+    h1, h2, h3, h4, h5
+      margin-block-start: 2em
+
+    h1
+      font-size: 1.5em
+
+    h2
+      font-size: 1.3em
+
+    h3
+      font-size: 1.1em
+
+    h4
+      font-size: 1em
+
+    h5
+      font-size: 0.85em
+
+    a
+      color: #2196f3
+      text-decoration: underline
+
+
+
+  .book-cover
+    border: 2px solid #d4cece
+    width: 42%
+
+  .book-evaluation-wrapper
+    display: grid
+    grid-template-columns: .85fr 1fr
+
+    .title
+      text-align: right
+      padding-right: .5em
+      margin: 0
+      font-weight: bold
+      font-size: .95em
+      opacity: .8
+
+
+  .post-contents
+    text-align: left
+    color: var(--font-color--post-content)
+
+  .footnote
+    font-size: .8em
+    font-weight: bold
+    color: #2196f3
+    vertical-align: super
+    margin-inline-end: .5em
+    text-decoration: none!important
+
+  .footnote-desc
+    opacity: .8
+    margin-left: 1em
+
+    .number
+      margin-right: .3em
+
+  .rating-container
+    display: flex
+    align-items: center
+    padding-left: .5em
+
+    .rating
+      font-style: normal
+      font-family: var(--font-family--icon)
+      color: #f3e3a5
+
+      &.full
+        font-weight: 900
+        color: #f1c40e
+
+      &:before
+        content: '\f005'
+
 //.container
 //  &.post-detail
-//    text-align: center
-//
-//    .contents-wrapper
-//      padding-left: 18%
-//      padding-right: 18%
-//
-//    .post-content
-//      text-align: left
-//      color: var(--font-color--post-content)
-//
-//      h1, h2, h3, h4, h5
-//        margin-block-start: 3em
-//
-//      h1
-//        font-size: 1.5em
-//
-//      h2
-//        font-size: 1.3em
-//
-//      h3
-//        font-size: 1.1em
-//
-//      h4
-//        font-size: 1em
-//
-//      h5
-//        font-size: 0.85em
-//
-//      a
-//        color: #2196f3
-//        text-decoration: underline
-//
-//      p, li
-//        line-height: 1.8em
-//
-//
-//      table
-//        width: 100%
-//        border-spacing: 0
-//        border: 1px solid #eee
-//        border-width: 1px 1px 0 1px
-//
-//        th, td
-//          padding: 1em
-//          border: 1px solid #eee
-//          border-width: 0 0 1px 1px
-//
-//          &:first-child
-//            border-left-width: 0
-//
-//        th
-//          background: #f7f6f5
-//
-//        td
-//          background: #fff
-//          font-size: .9em
-//
-//        tr
-//          border: 1px solid red
-//
-//    .thumbnail
-//      border-radius: 0
-//
-//    .footnote
-//      font-size: .8em
-//      font-weight: bold
-//      color: #2196f3
-//      vertical-align: super
-//      margin-inline-end: .5em
-//      text-decoration: none!important
-//
-//    .footnote-desc
-//      opacity: .8
-//      margin-left: 1em
-//
-//      .number
-//        margin-right: .3em
-//
+
 //    code
 //      line-height: 2em
 //
@@ -221,7 +236,7 @@
 //        &:before
 //          content: ''
 //
-//    a.btn-debugger
+//    .btn-debugger
 //      color: var(--font-color--default)
 //
 //    .stepper
@@ -289,42 +304,12 @@
 //      a
 //        font-size: .9em
 //
-//    &.text
-//      .thumbnail
-//        width: 70%
-//
-//    .book-cover
-//      border: 2px solid #d4cece
-//      width: 42%
-//
-//    .book-evaluation-wrapper
-//      display: grid
-//      grid-template-columns: .85fr 1fr
-//
-//      .title
-//        text-align: right
-//        padding-right: .5em
-//        margin: 0
-//        font-weight: bold
-//        font-size: .95em
-//        opacity: .8
-//
-//    .rating-container
-//      display: flex
-//      align-items: center
-//      padding-left: .5em
-//
-//      .rating
-//        font-family: var(--font-family--icon)
-//        color: #f3e3a5
-//
-//        &.full
-//          font-weight: 900
-//          color: #f1c40e
-//
-//        &:before
-//          content: '\f005'
-//
+
+
+
+
+
+
 //    .translation-article-wrapper
 //      &:not(:first-child)
 //        border-top: 1px solid #eee
@@ -373,7 +358,9 @@
 //
 //        .title
 //          font-weight: bold
-//
+
+
+
 //    .accordion-wrapper
 //      .contents
 //        display: none
@@ -408,13 +395,12 @@
 //
 //
 //
-//@media screen and (max-width: 768px)
-//  .container
-//    &.post-detail
-//      &.text
-//        .thumbnail
-//          width: 100%
-//
-//      .contents-wrapper
-//        padding-left: calc(var(--padding--contents-wrapper-x) / 2)
-//        padding-right: calc(var(--padding--contents-wrapper-x) / 2)
+
+@media screen and (max-width: 768px)
+  .post-detail.container
+    .thumbnail
+      width: 100%!important
+
+    .contents-wrapper
+      padding-left: calc(var(--padding--contents-wrapper-x) / 2)
+      padding-right: calc(var(--padding--contents-wrapper-x) / 2)
